[gd_scene load_steps=14 format=3 uid="uid://cyrrcun8uhsud"]

[ext_resource type="Script" uid="uid://ddnpcl0x5nt1v" path="res://gen_protein.gd" id="1_2ekmo"]
[ext_resource type="Script" uid="uid://b200l3agdsubq" path="res://main.gd" id="1_wcsej"]
[ext_resource type="Script" uid="uid://dhdeoqp4jh1dq" path="res://controls.gd" id="2_2s2s6"]
[ext_resource type="PackedScene" uid="uid://cqhw276realc" path="res://addons/godot-xr-tools/functions/function_pointer.tscn" id="3_akp6j"]
[ext_resource type="PackedScene" uid="uid://clujaf3u776a3" path="res://addons/godot-xr-tools/objects/viewport_2d_in_3d.tscn" id="6_ifgtj"]
[ext_resource type="PackedScene" uid="uid://dbxjmijds021s" path="res://main_gui.tscn" id="7_erlh2"]

[sub_resource type="BoxShape3D" id="BoxShape3D_hqawy"]
size = Vector3(10, 0.1, 10)

[sub_resource type="BoxMesh" id="BoxMesh_n5oc0"]
size = Vector3(10, 0.1, 10)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_25kuw"]
radius = 0.01
height = 0.1

[sub_resource type="CapsuleMesh" id="CapsuleMesh_sbtsp"]
radius = 0.01
height = 0.1

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_7mycd"]

[sub_resource type="BoxShape3D" id="BoxShape3D_pw8qa"]
size = Vector3(0.1, 0.1, 0.1)

[sub_resource type="BoxMesh" id="BoxMesh_p0whk"]
size = Vector3(0.1, 0.1, 0.1)

[node name="main" type="Node3D"]
script = ExtResource("1_wcsej")

[node name="floor" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.25, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="floor"]
shape = SubResource("BoxShape3D_hqawy")

[node name="MeshInstance3D" type="MeshInstance3D" parent="floor"]
mesh = SubResource("BoxMesh_n5oc0")
skeleton = NodePath("../CollisionShape3D")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.0492332, 0.998787, 0, -0.998787, 0.0492332, 0, 22.891, 0)

[node name="XROrigin3D" type="XROrigin3D" parent="."]
script = ExtResource("2_2s2s6")

[node name="XRCamera3D" type="XRCamera3D" parent="XROrigin3D"]

[node name="left_hand" type="XRController3D" parent="XROrigin3D"]
tracker = &"left_hand"

[node name="Area3D" type="Area3D" parent="XROrigin3D/left_hand"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
collision_layer = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="XROrigin3D/left_hand/Area3D"]
shape = SubResource("CapsuleShape3D_25kuw")

[node name="MeshInstance3D" type="MeshInstance3D" parent="XROrigin3D/left_hand/Area3D"]
mesh = SubResource("CapsuleMesh_sbtsp")

[node name="FunctionPointer" parent="XROrigin3D/left_hand" instance=ExtResource("3_akp6j")]
process_mode = 4
show_laser = 2
laser_length = 1
collision_mask = 5242882

[node name="right_hand" type="XRController3D" parent="XROrigin3D"]
tracker = &"right_hand"

[node name="Area3D" type="Area3D" parent="XROrigin3D/right_hand"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
collision_layer = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="XROrigin3D/right_hand/Area3D"]
shape = SubResource("CapsuleShape3D_25kuw")

[node name="MeshInstance3D" type="MeshInstance3D" parent="XROrigin3D/right_hand/Area3D"]
mesh = SubResource("CapsuleMesh_sbtsp")

[node name="FunctionPointer" parent="XROrigin3D/right_hand" instance=ExtResource("3_akp6j")]
show_laser = 2
laser_length = 1
collision_mask = 5242882

[node name="protein" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
script = ExtResource("1_2ekmo")

[node name="Area3D" type="Area3D" parent="protein"]
transform = Transform3D(0.01, 0, 0, 0, 0.01, 0, 0, 0, 0.01, 0, 0, 0)
collision_mask = 0
monitoring = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="protein/Area3D"]
shape = SubResource("ConvexPolygonShape3D_7mycd")

[node name="model" type="Node3D" parent="protein"]
transform = Transform3D(0.01, 0, 0, 0, 0.01, 0, 0, 0, 0.01, 0, 0, 0)

[node name="test_cube" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.627347, 0.543987, 0)

[node name="Area3D" type="Area3D" parent="test_cube"]
collision_mask = 0
monitoring = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="test_cube/Area3D"]
shape = SubResource("BoxShape3D_pw8qa")

[node name="MeshInstance3D" type="MeshInstance3D" parent="test_cube"]
mesh = SubResource("BoxMesh_p0whk")

[node name="Viewport2Din3D" parent="." instance=ExtResource("6_ifgtj")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -1)
collision_layer = 5242882
scene = ExtResource("7_erlh2")
viewport_size = Vector2(1500, 1000)
unshaded = true
scene_properties_keys = PackedStringArray("main_gui.gd")

[connection signal="button_pressed" from="XROrigin3D/left_hand" to="XROrigin3D" method="_on_left_hand_button_pressed"]
[connection signal="input_float_changed" from="XROrigin3D/left_hand" to="XROrigin3D" method="_on_left_float_change"]
[connection signal="area_entered" from="XROrigin3D/left_hand/Area3D" to="XROrigin3D" method="_left_area_entered"]
[connection signal="area_exited" from="XROrigin3D/left_hand/Area3D" to="XROrigin3D" method="_left_area_exited"]
[connection signal="button_pressed" from="XROrigin3D/right_hand" to="XROrigin3D" method="_on_right_hand_button_pressed"]
[connection signal="input_float_changed" from="XROrigin3D/right_hand" to="XROrigin3D" method="_on_right_float_change"]
[connection signal="area_entered" from="XROrigin3D/right_hand/Area3D" to="XROrigin3D" method="_right_area_entered"]
[connection signal="area_exited" from="XROrigin3D/right_hand/Area3D" to="XROrigin3D" method="_right_area_exited"]
